# focalpoint

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
assets/: focalpoint_card_map.html
backend/: config.py
backend/alerts/: severity_scorer.py
backend/api/: dependencies.py  main.py  schemas.py
backend/data/: cpj_incidents.csv  rsf_scores.py
backend/ingestion/: acled_connector.py  acled_connector_disabled.py  cpj_connector.py  gdelt_connector.py  gdeltcloud_connector.py
backend/processors/: alert_generator.py  gemma_client.py  local_transcriber.py  prompt_builder.py
backend/scheduler/: jobs.py  store.py
backend/scripts/: smoke_test.py  verify_watch_zones.py
backend/security/: output_validator.py  rate_limiter.py  sanitiser.py
backend/tests/: conftest.py  test_acled_connector.py  test_api.py  test_cpj_connector.py  test_gdelt_connector.py  test_gdeltcloud_connector.py  test_processors.py  test_sanitiser.py  test_scheduler.py  test_security.py  test_severity_scorer.py
docs/: architecture.md  caching.md  data-sources.md  security.md
mobile/: .env.example  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile/app/: _layout.tsx
mobile/components/: AlertCard.tsx  AlertCardSkeleton.tsx  CachedBanner.tsx  CitationList.tsx  ConfidenceBar.tsx  DiscreetOverlay.tsx  ElevationNote.tsx  EmptyRegionCard.tsx  ErrorBoundary.tsx  FallbackCard.tsx  FloorWarning.tsx  LoadingOverlay.tsx  MapFallback.tsx  MapView.native.tsx  MapView.tsx  MapView.web.tsx  SeverityBadge.tsx  StaleLabel.tsx
mobile/constants/: languages.ts  severity.ts  watchZones.ts
mobile/hooks/: useAlerts.ts  useAudio.ts  useConnectivity.ts  useLanguage.ts
mobile/services/: alerts.ts  api.ts  cache.ts  map.ts  (+4 more)
(+14 files in other folders)
