[project]
name = "focalpoint"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "fastapi",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx",
    "redis",
    "slowapi",
    "uvicorn[standard]",
    "loguru",
    "google-genai",
    "pandas",
    "aiofiles",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.10,<4",
    "python-multipart>=0.0.26",
    "transformers>=5.8.0",
    "torch>=2.11.0",
    "librosa>=0.11.0",
    "accelerate>=1.13.0",
    "pillow>=12.2.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
